# eir-chrome-plugin

./: .gitignore  EIR-FORMAT-OVERVIEW.md  LICENSE  PACKAGING-GUIDE.md  README.md  content.js  eir-format-simple.yaml  eir-format-specification.md  eir-generator.js  eir-space-demo.html  manifest.json  popup.html  privacy-policy.html
.github/workflows/: sync-unlock-issues.yml
ChromeExtension/: DATA-TRANSFER-README.md  INSTALL.md  content.js  data-transfer.js  eir-generator.js  icon-generator.html  kanta-network-probe.js  kanta-recorder.js  manifest.json  package-instructions.md  page_source_journal.html  popup.html  styles.css
EgenRemiss/: PROJECT-ASSESSMENT.md  clinics-with-websites-specialist.json  clinics-with-websites.json  filter-clinics.js  scrape-clinic-websites.js  scrape-emails.js  targets-all.csv  targets-hospital.json  targets-specialist.json  targets-vardcentral.json
EirViewer/: Package.swift
docs/: CNAME  eu-ehr-integration-roadmap.md  eu-patient-ehr-integration-map.md  index.html  ios-health-population-comparison.md  og-preview.html  privacy-policy.html  unlock-atlas.js  unlock-countries.json  unlock-issues.json
eir-stories/: BACKEND-NOTES.md  IMPLEMENTATION-ROADMAP.md  LANDING-PAGE-COPY.md  MVP-SPEC.md  PII-REVIEW.md  PRODUCT-BRIEF.md  PUBLIC-STORY-PAGE.md  README.md  SITE-ARCHITECTURE.md  STORY-COMPOSER.md  STORY-MODEL.md  package.json  server.js
eir-stories/rust-backend/: Cargo.toml  README.md
eir-stories/rust-backend/src/: eir_import.rs  main.rs
releases/: EirViewer-macOS.dmg
scripts/: build-chrome-extension-zip.sh  sync-unlock-issues.mjs
(+263 files in other folders)
