[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "json", "form", "multipart"] }
bcrypt = "0.16"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1.47", features = ["full"] }
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
uuid = { version = "1.18", features = ["v4"] }
